基本料金マスターにレコードが無い場合、EmptyResultDataAccessException が発生する例外の対処